Fixed too much autocomplete padding

--- a/app/client/stylesheets/components/pu-autocomplete.sass
+++ b/app/client/stylesheets/components/pu-autocomplete.sass
@@ -11,12 +11,9 @@
         overflow: auto
         border-radius: 0 0 4px 4px
 
-        >.tt-dataset
-            padding: 15px
-
-            >.tt-suggestion
-                padding: 5px
-                cursor: pointer
+        > .tt-dataset
+            > .tt-suggestion
+                margin-bottom: 4px
 
                 &:hover
                     color: $color-secondary
